switch to new config system