@@ -2,7 +2,6 @@ package com.zacharybarbanell.betterplanting.config;
 
 import java.util.Map;
 import java.util.Optional;
-import java.util.Properties;
 import java.util.function.Function;
 
 import com.google.common.base.Functions;
@@ -13,14 +12,14 @@ public class Parser {
 
     private static final Map<Class<?>, Function<String, ?>> PARSERS = ImmutableMap.<Class<?>, Function<String, ?>>builder()
         .put(String.class, Functions.identity())
-        .put(Double.class, Double::parseDouble)
+        .put(Double.class, Double::valueOf)
         .put(Integer.class, Integer::valueOf) 
         .put(Boolean.class, Boolean::valueOf)
         .build();
 
     public static <T> Optional<T> parse(String s, Class<T> clazz) {
         if (!PARSERS.containsKey(clazz)) {
-            throw new IllegalArgumentException(String.format("Type %s has no parser", clazz));
+            throw new IllegalArgumentException("Type %s has no parser".formatted(clazz));
         }
         else {
             Function<String, T> func = (Function<String, T>) PARSERS.get(clazz);    
